# plonky2

./: Cargo.toml  Justfile  README.md  rust-toolchain.toml
ecdsa/: Cargo.toml
ecdsa/src/gadgets/: biguint.rs  curve.rs  curve_fixed_base.rs  curve_msm.rs  curve_windowed_mul.rs  ecdsa.rs  glv.rs  nonnative.rs  split_nonnative.rs
ecgfp5/: Cargo.toml
ecgfp5/src/gadgets/: base_field.rs  curve.rs  schnorr.rs
ecgfp5/src/gates/: gfp5_mul.rs
field/: Cargo.toml
field/src/: fft.rs  lib.rs
field/src/polynomial/: mod.rs
plonky2/: Cargo.toml  README.md
plonky2/benches/: lde.rs  merkle.rs
plonky2/examples/: fibonacci.rs
plonky2/src/: lib.rs  lookup_test.rs
plonky2/src/batch_fri/: prover.rs
plonky2/src/fri/: oracle.rs  prover.rs
plonky2/src/gates/: gate.rs  gate_testing.rs  low_degree_interpolation.rs
plonky2/src/hash/: batch_merkle_tree.rs  hash_types.rs  merkle_proofs.rs  merkle_tree.rs  mod.rs  poseidon.rs  poseidon_bn128.rs  poseidon_goldilocks.rs
plonky2/src/hash/arch/aarch64/: goldilocks_neon.rs  poseidon2_goldilocks_neon.rs
plonky2/src/hash/arch/x86_64/: goldilocks_avx2.rs  goldilocks_avx512.rs  mod.rs  poseidon_bn128_avx2.rs  poseidon_goldilocks_avx2.rs  poseidon_goldilocks_avx2_bmi2.rs  poseidon_goldilocks_avx512.rs
plonky2/src/plonk/: circuit_builder.rs  config.rs  prover.rs
plonky2/src/util/: cuda.rs  lighter_adapter.rs  mod.rs  reducing.rs  test_utils.rs
plonky2/src/util/serialization/: gate_serialization.rs  mod.rs
plonky2/tests/: factorial_test.rs  fibonacci_test.rs  range_check_test.rs  test_utils.rs
starky/: Cargo.toml
starky/src/: fibonacci_stark.rs  lib.rs  permutation_stark.rs  stark_testing.rs  unconstrained_stark.rs
u32/: Cargo.toml
u32/src/gadgets/: arithmetic_u32.rs  multiple_comparison.rs
