[package]
name = "plonky2_ecgfp5"
version = "0.2.0"
authors = [
    "Sebastien La Duca <sladuca777@gmail.com>",
    "Yongjin Huang <jason1435267417@gmail.com>",
]
readme = "README.md"
description = "plonky2 gadgets for EcGFp5 curve and base field arithmetic"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { path = "../plonky2" }
plonky2_field = { path = "../field" }
plonky2_ecdsa = { path = "../ecdsa" }
plonky2_u32 = { path = "../u32" }
num = "0.4"
itertools = "0.10"
serde = "1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
hex = "0.4.3"
zeknox = { workspace = true, optional = true }

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
anyhow = "1.0.51"
criterion = "0.4"
log = "0.4"
env_logger = "0.10"

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "curve"
harness = false

[[bench]]
name = "schnorr"
harness = false

[features]
cuda = ["zeknox/cuda", "plonky2/cuda"]
no_cuda = ["zeknox/no_cuda", "plonky2/no_cuda"]
