[package]
name = "plonky2_field"
description = "Finite field arithmetic"
version = "0.2.2"
authors = ["Daniel Lubarov <daniel@lubarov.com>", "William Borgeaud <williamborgeaud@gmail.com>", "Jacqueline Nabaglo <j@nab.gl>", "Hamish Ivey-Law <hamish@ivey-law.name>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[example]]
name = "fft"

[dependencies]
anyhow = { workspace = true }
plonky2_util = { version = "0.2.0", path = "../util", default-features = false }
lazy_static = "1.4.0"
itertools = { workspace = true, features = ["use_alloc"] }
num = { workspace = true, features = ["alloc"] }
rand = { workspace = true, features = ["getrandom"] }
serde = { workspace = true, features = ["alloc"] }
static_assertions = { workspace = true }
unroll = { workspace = true }
zeknox = { workspace = true, optional = true }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }

[build-dependencies]
plonky2_util = { version = "0.2.0", path = "../util", default-features = false }
anyhow = { workspace = true }
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
quote = "1"

[features]
default = []
cuda = ["zeknox/cuda"]
precompile = []
no_cuda = ["zeknox/no_cuda"]

# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
