[package]
name = "plonky2_u32"
description = "u32 gadget for Plonky2"
version = "0.2.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
num = { version = "0.4", default-features = false }
plonky2 = { path = "../plonky2" }
zeknox = { workspace = true, optional = true }

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }

[features]
cuda = ["zeknox/cuda", "plonky2/cuda"]
no_cuda = ["zeknox/no_cuda", "plonky2/no_cuda"]